--- a/static/about.html
+++ b/static/about.html
@@ -36,6 +36,13 @@
       border-radius: 10px;
       margin: 20px;
     }
+    .logo-container {
+      margin-top: 20px;
+    }
+    .logo-container img {
+      max-width: 150px; /* Adjust size as needed */
+      height: auto;
+    }
   </style>
 </head>
 <body>
@@ -55,11 +62,17 @@
       </ul>
     </nav>
   </header>
-
+  
   <!-- Main Content -->
   <main class="container">
+    
     <!-- Project -->
     <section class="card">
+      <h3>TEAM NAME :- CODEFUSION INNOVATORS</h3>
+    <div class="logo-container">
+        <!-- Replace the src with your actual logo path -->
+        <img src="logo.png" alt="Team Logo">
+    </div>
       <h3>About Our Project</h3>
       <br>
       <h3>Excited to Share Our Latest Project: Stock Financial Assistant!</h3>
